# dbt-analytics-incremental-dd

./: .gitignore  README.md  catalog.json  manifest.json  publish-dbt-docs.sh  pyproject.toml
.devcontainer/: devcontainer.json
DataGenerator/: README.md  main.py  order.py  pyproject.toml
dbt-transform/: README.md  pyproject.toml
dbt-transform/dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt-transform/dbt_project/macros/functions/: generate_schema_name.sql
dbt-transform/dbt_project/macros/functions/cleaning/: cleaning_phone_number.sql
dbt-transform/dbt_project/macros/functions/override/: generate_schema_name.sql
dbt-transform/dbt_project/macros/tests/: check_negative_value.sql  email_validation.sql
dbt-transform/dbt_project/models/staging/: schema.yml  source.yml  stg_customer.sql  stg_order.sql  stg_order_item.sql  stg_product.sql
dbt-transform/dbt_project/models/staging/schemas/: stg_customer_schema.yml  stg_order_items_schema.yml  stg_order_schema.yml  stg_products_schema.yml
dbt-transform/dbt_project/tests/staging/: phone_number_test.sql
dbt-transform/src/dbt_transform/: __init__.py
