[project]
name = "dbt-analytics-incremental-dd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anil Kumar Chhetri", email = "59021082+anil-chhetri@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"


[tool.uv.workspace]
members = ["DataGenerator", "dbt-transform"]