[project]
name = "dbt-transform"  # Can be any unique name; doesn't need to match directory
version = "0.1.0"       # Arbitrary version
requires-python = ">=3.12"
description = "dbt transformation models"
readme = "README.md"

dependencies = [
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
]

[tool.uv]
package = false  # Keeps it from being built/installed as a package